# histocat-web

./: .dockerignore  .editorconfig  .env  .env.template  .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  LICENSE.md  Makefile  README.md  cookiecutter-config-file.yml  docker-compose.deploy.build.yml  docker-compose.dev.build.yml  docker-compose.dev.env.yml  docker-compose.dev.ports.yml  docker-compose.shared.admin.yml  docker-compose.shared.base-images.yml  docker-compose.shared.depends.yml  docker-compose.shared.env.yml  docker-compose.test.yml  env-backend.env  index.html  mkdocs.yml  pyrightconfig.json  sitemap.xml
backend/: .editorconfig  .gitignore  alembic.ini  backend.dockerfile  celeryworker.dockerfile  pyproject.toml  setup.cfg  tests.dockerfile  worker-base.dockerfile  worker.cellprofiler.dockerfile  worker.dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 201904101520_b9935fae5e7c_init.py  201904101521_fed22b8a9121_add_user_table.py  201904101529_7bed832a38b0_add_experiment_table.py  201904101530_a596fd31b7bd_add_slide_table.py  201904101544_b111fd91b7sw_add_panorama_table.py  201904101550_b182e0878258_add_aquisition_table.py  202006101733_fa29b07fd05f_add_preset_table.py  202006101737_06df70ede08a_add_gate_table.py  20200814132100_a4d621b5f66c_initialization.py  20200814132120_c72fcc1bfbaf_add_group_table.py  20200814132134_4bec27c370f0_add_user_table.py  20200814132146_e1c9291e68ae_add_member_table.py  20200814132154_af7cd5a143a9_add_experiment_table.py  20200814132154_af7cd5a143a9_add_project_table.py  20200814132201_49ce2d9138fa_add_slide_table.py  20200814132217_19404c6188e2_add_panorama_table.py  20200814132230_299731f9d191_add_acquisition_table.py  20200814132242_601250049059_add_dataset_table.py  20200814132252_a01d5224936c_add_result_table.py  20200814132319_c18a654cf9b3_add_preset_table.py  20200814132327_5a34bc7f5ed8_add_gate_table.py  20200930111552_6f205a3fb0b0_initialization.py  20200930111753_219260649256_add_user_table.py  20200930111828_e0e586eec464_add_group_table.py  20200930111913_ee2d279cae47_add_member_table.py  20200930111950_b33b3a0d8331_add_project_table.py  20200930112031_605759a373a2_add_slide_table.py  20200930112117_69e599da5845_add_panorama_table.py  20200930112156_b3c290b4bb05_add_acquisition_table.py  20200930112241_59a8939464a4_add_preset_table.py  20200930112329_56b78600703e_add_dataset_table.py  20200930112430_aba61a88be54_add_gate_table.py  20200930112537_cf4962b43209_add_pipeline_table.py  20200930112613_bcd5ecf42c3e_add_result_table.py  20210105124927_984ad93b1b7c_add_model_table.py
backend/app/: Pipfile  alembic.ini  backend_pre_start.py  main.py  pyproject.toml  setup.cfg  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 201904101528_b9935fae5e7c_first_revision.py  201904101529_7bed832a38b0_add_experiment_table.py  201904101529_b9935fae5e7c_first_revision.py  201904101530_7bed832a38b0_add_experiment_table.py  201904101530_a596fd31b7bd_add_slide_table.py  201904101531_b182e0878258_add_aquisition_table.py  201904101532_96df6178591e_add_channel_table.py  201904101544_b111fd91b7sw_add_panorama_table.py  201904101546_h741fd42b9kr_add_roi_table.py  201904101548_c537dg62e8je_add_roi_point_table.py  201904101550_b182e0878258_add_aquisition_table.py  201904101556_96df6178591e_add_channel_table.py  201906181203_485aa67ca586_add_submission_table.py  201906181638_639adf01602f_add_task_table.py  201907050908_9d5cad983bce_add_dataset_table.py  201907272156_35b87e175854_add_share_table.py  201908211403_84f73cb76d55_add_acquisition_artifact_table.py  4a39e2cdc26a_create_experiment_table.py  e6ae69e9dcb9_first_revision.py
backend/app/api/api_v1/: api.py
backend/app/api/utils/: security.py
backend/app/app/: celeryworker_pre_start.py  debug.py  main.py  tests_pre_start.py  utils.py  worker.py
backend/app/app/core/: celery_app.py  config.py  errors.py  file_upload_status.py  image.py  log.py  metadata.py  notifier.py  redis_manager.py  utils.py
backend/app/app/crud/: __init__.py  experiment.py  user.py
backend/app/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/app/db_models/: __init__.py  acquisition.py  alignment.py  base.py  channel.py  cycle.py  experiment.py  feature.py  file.py  plate.py  site.py  slide.py  user.py  well.py
backend/app/app/io/: artifacts.py  dataset.py  imcfolder.py  mcd.py  mcd_loader.py  ome_tiff_loader.py  readers.py  text_loader.py  utils.py  writers.py  zip.py
backend/app/app/models/: experiment.py  msg.py  token.py  user.py
backend/app/core/: image.py  redis_manager.py
backend/app/db/: init_db.py
backend/app/io/: dataset.py  imcfolder.py  imcfolder_v1.py  mcd.py  zip.py
backend/app/modules/acquisition/: controller.py
backend/app/modules/analysis/: controller.py
backend/app/modules/auth/: controller.py  dto.py
backend/app/modules/core/: controller.py
backend/app/modules/dataset/: controller.py  dto.py  models.py  service.py
backend/app/modules/experiment/: controller.py  models.py  service.py
backend/app/modules/panorama/: controller.py  dto.py  models.py
backend/app/modules/share/: controller.py  dto.py  models.py  service.py
backend/app/requirements/: common.in  common.txt  dev.in  dev.txt  prod.in  prod.txt
backend/histocat/: __init__.py  backend_pre_start.py  config.py  initial_data.py  main.py  tests_pre_start.py  worker.py  worker_pre_start.py
backend/histocat/api/: db.py  main.py  router.py  security.py  utils.py
backend/histocat/core/: base.py  config.py  constants.py  errors.py  image.py  init_db.py  jwt.py  notifier.py  redis_manager.py  session.py  utils.py
backend/histocat/db/: init_db.py  session.py
backend/histocat/email-templates/: confirm_signup.html  reset_password.mjml
backend/histocat/io/: dataset.py  imcfolder.py  imcfolder_v1.py  mcd.py  model.py  zip.py
backend/histocat/tests/: conftest.py
backend/histocat/worker/: worker.py
backend/imctoolkit/: __init__.py  image_single_cell_data.py  multichannel_image.py  spatial_cell_graph.py  spatial_single_cell_data.py  utils.py
(+1229 files in other folders)
