[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "histocat"
version = "2021.01.04"
description = "histoCAT for Web"
authors = ["Anton Rau <anton.rau@uzh.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.6.0"
aioredis = { version = "^1.3.1", extras = ["hiredis"] }
alembic = { version = "^1.4.3", optional = true }
dramatiq = { version = "^1.10.0", extras = ["rabbitmq", "watch"] }
email-validator = "^1.1.1"
emails = "^0.6"
fastapi = "^0.63.0"
gunicorn = { version = "^20.0.4", optional = true }
imctools = "^2.1.0"  # "^1.0.8"
jinja2 = "^2.11.2"
mahotas = "^1.4.11"
opencv-python-headless = "^4.5.1.48"
orjson = "^3.4.6"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
phenograph = "1.5.3"  # { git = "https://github.com/jacoblevine/phenograph.git" }
psycopg2-binary = "^2.8.6"
ptvsd = "^4.3.2"
pyarrow = "^2.0.0"
pydevd-pycharm = "^203.*"
PyJWT = "^2.0.0"
pynndescent = "^0.5.1"
python-multipart = { version = "^0.0.5", optional = true }
redis = { version = "^3.5.3", extras = ["hiredis"] }
requests = "^2.25.1"
scanpy = { version = "^1.6.0", extras = ["leiden", "louvain"] }
scikit-image = "^0.18.1"
SQLAlchemy = "^1.3.22"
tenacity = "^6.3.1"
tensorflow = "^2.4.0"
ujson = "^4.0.1"
uvicorn = { version = "^0.13.3", extras = ["standard"], optional = true }
xarray = "^0.16.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^19.10b0"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "*"
pylint = "^2.6.0"
pytest = "^6.2.1"
sqlalchemy-stubs = "^0.3"
vulture = "^2.1"

[tool.poetry.extras]
backend = ["alembic", "python-multipart", "gunicorn", "uvicorn"]
worker = ["tensorflow"]

[tool.black]
line-length = 120
target-version = ["py38"]
