[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "histocat"
version = "2021.03.04"
description = "histoCAT for Web"
authors = ["Anton Rau <anton.rau@uzh.ch>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
aiofiles = "^0.6.0"
aioredis = { version = "^1.3.1", extras = ["hiredis"] }
alembic = { version = "^1.5.5", optional = true }
deepcell-cpu = { version = "^0.9.0", optional = true }
dramatiq = { version = "^1.10.0", extras = ["rabbitmq", "watch"] }
email-validator = "^1.1.1"
emails = "^0.6"
fastapi = "^0.63.0"
gunicorn = { version = "^20.0.4", optional = true }
imctools = "^2.1.5"
jinja2 = { version = "^2.11.3", optional = true }
mahotas = "^1.4.11"
opencv-python-headless = "^4.5.1.48"
orjson = "^3.5.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
psycopg2-binary = "^2.8.6"
ptvsd = "^4.3.2"
pyarrow = "^3.0.0"
pydantic = "^1.8.1"
pydevd-pycharm = "^211.*"
PyJWT = "^2.0.0"
pynndescent = { version = "^0.5.2", optional = true }
python-multipart = { version = "^0.0.5", optional = true }
redis = { version = "^3.5.3", extras = ["hiredis"] }
requests = "^2.25.1"
scanpy = { version = "^1.7.1", extras = ["leiden", "louvain"] }
scikit-image = "0.16.2"
SQLAlchemy = "^1.3.23"
tenacity = "^6.3.1"
ujson = "^4.0.1"
uvicorn = { version = "^0.13.4", extras = ["standard"], optional = true }

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^19.10b0"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "*"
pylint = "^2.7.2"
pytest = "^6.2.1"
sqlalchemy-stubs = "^0.4"
vulture = "^2.3"

[tool.poetry.extras]
backend = ["alembic", "jinja2", "python-multipart", "gunicorn", "uvicorn"]
worker = ["deepcell-cpu", "pynndescent", "xarray"]

[tool.black]
line-length = 120
target-version = ["py38"]
