[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "histocat"
version = "2021.06.09"
description = "histoCAT for Web"
authors = ["Anton Rau <anton.rau@uzh.ch>"]
license = "MIT"
homepage = "https://github.com/BodenmillerGroup/histocat-web"
repository = "https://github.com/BodenmillerGroup/histocat-web"
documentation = "https://bodenmillergroup.github.io/histocat-web"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
aiofiles = "^0.7.0"
aioredis = { version = "^1.3.1", extras = ["hiredis"] }
alembic = { version = "^1.6.5", optional = true }
deepcell-cpu = { version = "^0.9.0", optional = true }
dramatiq = { version = "^1.11.0", extras = ["rabbitmq", "watch"] }
email-validator = "^1.1.1"
emails = "^0.6"
fastapi = "^0.65.1"
gunicorn = { version = "^20.0.4", optional = true }
imctools = "^2.1.7"
jinja2 = { version = "^3.0.0", optional = true }
mahotas = "^1.4.11"
opencv-python-headless = "^4.5.2.54"
orjson = "^3.5.3"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
psycopg2-binary = "^2.8.6"
ptvsd = "^4.3.2"
pyarrow = "^4.0.1"
pydantic = "^1.8.2"
pydevd-pycharm = "^211.*"
PyJWT = "^2.1.0"
pynndescent = { version = "^0.5.2", optional = true }
python-multipart = { version = "^0.0.5", optional = true }
redis = { version = "^3.5.3", extras = ["hiredis"] }
requests = "^2.25.1"
scanpy = { version = "^1.7.2", extras = ["leiden", "louvain"] }
scikit-image = "0.16.2"
SQLAlchemy = "^1.4.17"
tenacity = "^7.0.0"
ujson = "^4.0.1"
uvicorn = { version = "^0.14.0", extras = ["standard"], optional = true }

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"
sqlalchemy-stubs = "*"
vulture = "*"

[tool.poetry.extras]
backend = ["alembic", "jinja2", "python-multipart", "gunicorn", "uvicorn"]
worker = ["deepcell-cpu", "pynndescent"]

[tool.black]
line-length = 120
target-version = ["py38"]
