[build-system]
requires = ["poetry>=0.12.17"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "histocat"
version = "0.1.0"
description = "HistoCAT for Web"
authors = ["Anton Rau <anton.rau@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
aiofiles = "^0.4.0"
aioredis = {version = "^1.2", extras = ["hiredis"]}
alembic = { version = "^1.1.0", optional = true }
dramatiq = { version = "^1.6.1", extras = ["rabbitmq", "watch"] }
email-validator = "^1.0.4"
emails = "^0.5.15"
fastapi = "^0.36.0"
gunicorn = { version = "^19.9.0", optional = true }
imctools = "^1.0.3"
jinja2 = "^2.10.1"
opencv-python-headless = "^4.1"
psycopg2-binary = "^2.8.3"
pandas = "^0.25.1"
passlib = { version = "^1.7.1", extras = ["bcrypt"] }
pyarrow = "^0.14.1"
PyJWT = "^1.7.1"
python-multipart = { version = "^0.0.5", optional = true }
PyYAML = "^5.1.2"
requests = "^2.22.0"
SQLAlchemy = "^1.3.7"
tables = "^3.5"
tenacity = "^5.1.1"
ujson = "^1.35"
uvicorn = { version = "^0.8.6", optional = true }
redis = {version = "^3.3", extras = ["hiredis"]}

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
ptvsd = "^4.3.2"
pydevd-pycharm = "^192.*"
pytest = "^5.1.1"
vulture = "^1.0"
mypy = "^0.720"
autoflake = "^1.3.1"
isort = "^4.3.21"
black = { version = "^19.3-alpha.0", allows-prereleases = true }

[tool.poetry.extras]
backend = [ "alembic", "python-multipart", "gunicorn", "uvicorn" ]
worker = []

[tool.black]
line-length = 120
target-version = [ "py37" ]
