[build-system]
requires = ["poetry>=0.12.17"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "histocat"
version = "0.2.0"
description = "HistoCAT for Web"
authors = ["Anton Rau <anton.rau@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
aiofiles = "^0.4.0"
aioredis = {version = "^1.3", extras = ["hiredis"]}
alembic = { version = "^1.2.1", optional = true }
dramatiq = { version = "^1.7.0", extras = ["rabbitmq", "watch"] }
email-validator = "^1.0.4"
emails = "^0.5.15"
fastapi = "^0.42.0"
gunicorn = { version = "^19.9.0", optional = true }
imctools = "^1.0.3"
jinja2 = "^2.10.3"
opencv-python-headless = "^4.1"
psycopg2-binary = "^2.8.3"
pandas = "^0.25.1"
passlib = { version = "^1.7.1", extras = ["bcrypt"] }
phenograph = { version = "^1.5.2", git = "https://github.com/jacoblevine/phenograph.git" }
pyarrow = "^0.15.0"
PyJWT = "^1.7.1"
python-multipart = { version = "^0.0.5", optional = true }
PyYAML = "^5.1.2"
requests = "^2.22.0"
SQLAlchemy = "^1.3.10"
tables = "^3.5"
tenacity = "^5.1.1"
ujson = "^1.35"
uvicorn = { version = "^0.9.0", optional = true }
redis = {version = "^3.3", extras = ["hiredis"]}
scikit-learn = "^0.21.3"
opentsne = "^0.3.11"
umap-learn = "^0.3.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
ptvsd = "^4.3.2"
pydevd-pycharm = "^193.*"
pytest = "^5.2.1"
vulture = "^1.1"
mypy = "^0.730"
autoflake = "^1.3.1"
isort = "^4.3.21"
black = { version = "^19.3-alpha.0", allows-prereleases = true }

[tool.poetry.extras]
backend = [ "alembic", "python-multipart", "gunicorn", "uvicorn" ]
worker = []

[tool.black]
line-length = 88
target-version = [ "py37" ]
