[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "histocat"
version = "2020.01.30"
description = "HistoCAT for Web"
authors = ["Anton Rau <anton.rau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.4.0"
aioredis = {version = "^1.3", extras = ["hiredis"]}
alembic = { version = "^1.3.2", optional = true }
dramatiq = { version = "^1.7.0", extras = ["rabbitmq", "watch"] }
email-validator = "^1.0.4"
emails = "^0.5.15"
fastapi = "^0.45.0"
gunicorn = { version = "^20.0.4", optional = true }
imctools = "^1.0.5"
jinja2 = "^2.10.3"
opencv-python-headless = "^4.1"
psycopg2-binary = "^2.8.3"
pandas = "^0.25.1"
passlib = { version = "^1.7.1", extras = ["bcrypt"] }
phenograph = {git = "https://github.com/jacoblevine/phenograph.git"}
ptvsd = "^4.3.2"
pyarrow = "^0.15.0"
pydevd-pycharm = "^193.*"
PyJWT = "^1.7.1"
python-multipart = { version = "^0.0.5", optional = true }
PyYAML = "^5.3"
requests = "^2.22.0"
SQLAlchemy = "^1.3.10"
tables = "^3.6"
tenacity = "^6.0.0"
ujson = "^1.35"
uvicorn = { version = "^0.11.1", optional = true }
redis = {version = "^3.3", extras = ["hiredis"]}
scikit-learn = "^0.22"
opentsne = "^0.3.11"
umap-learn = "^0.3.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
pytest = "^5.2.1"
vulture = "^1.1"
mypy = "^0.761"
autoflake = "^1.3.1"
isort = "^4.3.21"
black = "^19.10b0"
sqlalchemy-stubs = "^0.3"
pylint = "^2.4.4"

[tool.poetry.extras]
backend = [ "alembic", "python-multipart", "gunicorn", "uvicorn" ]
worker = []

[tool.black]
line-length = 120
target-version = [ "py37" ]
